# doc-sqz

./: README.md  __init__.py  config.py  pyproject.toml
common/: cleaner.py  visualize.py
docx/: __init__.py  convert.py  extract.py
html/: __init__.py  extract.py
pdf/: __init__.py  extract.py  flatten.py
